Fixed spacing

--- a/client/src/components/Cover/Cover.css
+++ b/client/src/components/Cover/Cover.css
@@ -8,7 +8,7 @@
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: bold;
-    font-size: 13px;
+    font-size: 10px;
     color: #9E9E9E;
 }
 .middleWordssss{
@@ -21,7 +21,7 @@
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 11px;
+    font-size: 10px;
     color: #9E9E9E;
     margin-bottom: 2%;
 
