--- a/client/src/components/Cover/RequestHistory/RequestHistory.css
+++ b/client/src/components/Cover/RequestHistory/RequestHistory.css
@@ -1,7 +1,8 @@
-.topWords{
+.topWordsss{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 80%;
+    margin:auto;
     padding-top: 2%;
     padding-bottom: 2%;
     font-family: 'Open Sans', sans-serif;
@@ -10,7 +11,7 @@
     font-size: 10px;
     color: #9E9E9E;
 }
-.middleWords{
+.middleWordsss{
     display: flex;
     justify-content: space-between;
     width: 80%;
